etc/kubernetes/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: phpinfo-route
spec:
  to:
    kind: Service
    name: phpinfo
